2003/09/21 16:06 kaffeetisch

	* TODO: Updated to reflect recent changes.

2003/09/21 00:05 muppetman (EDT, not back in time)

	* AUTHORS: torsten forgot to credit himself :-)

	* xs/GnomeIconLookup.xs, xs/GnomeIconTheme.xs, xs/GnomeThumbnail.xs:
	GnomeIconTheme and GnomeThumbnailFactory didn't appear until about 2.0.6,
	according to the changelogs for libgnomeui.  only compile this stuff if we
	have the right types defined.

2003/09/20 23:32 rwmcfa1

	* xs/GnomeIconTheme.xs: list -> results, type-o i guess. wouldn't 
	compile now does.

2003/09/21 02:00 kaffeetisch

	Big overhaul.

	* Makefile.PL
	* genmaps.pl
	* gnome2perl.h: Add libbonoboui to the requirements.

	* maps: Add Bonobo typemaps.

	A xs/BonoboDock.xs
	A xs/BonoboDockItem.xs,
	* MANIFEST: First parts of Bonobo.  Necessary for GnomeApp and
	GnomeAppHelper.

	* xs/GnomeAbout.xs: Fix indention.

	* xs/GnomeApp.xs: Provide member accessors.  Implement
	gnome_app_add_toolbar, gnome_app_add_docked,
	gnome_app_add_dock_item, gnome_app_get_dock and
	gnome_app_get_dock_item_by_name.

	* xs/GnomeAppHelper.xs: Import the menu functions into the
	Gtk2::MenuShell namespace.  Implement gnome_app_find_menu_pos,
	gnome_app_fill_toolbar*, gnome_app_insert_menus*,
	gnome_app_remove_menus, gnome_app_remove_menu_range,
	gnome_app_install_menu_hints, gnome_app_setup_toolbar,
	gnome_app_install_appbar_menu_hints and
	gnome_app_install_statusbar_menu_hints.

	* xs/GnomeClient.xs: Implement gnome_client_set_*_command and
	gnome_client_add_static_arg.

	* xs/GnomeDateEdit.xs: Add FIXME comment.

	* xs/GnomeEntry.xs: Provide a default for the history_id parameter.

	* xs/GnomeFontPicker.xs: Implement gnome_font_picker_get_title,
	gnome_font_picker_get_font_name.  Remove
	gnome_font_picker_get_font.

	A xs/GnomeIconEntry.xs
	A xs/GnomeIconList.xs
	A xs/GnomeIconLookup.xs
	A xs/GnomeIconSelection.xs
	A xs/GnomeIconTheme.xs
	A xs/GnomePixmapEntry.xs,
	A xs/GnomeScores.xs,
	A xs/GnomeThumbnail.xs,
	A xs/GnomeWindow.xs,